Fix some bugs in footer section

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,7 +5,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
   <!-- footer of our page -->
-  <footer>
+  <footer id="footer-section">
 
     <!-- Section 1 -->
     <section class="section-1">
@@ -13,7 +13,7 @@
       <!-- Section 1 part1 -->
       <section class="about">
         <h2>About</h2>
-        <p>K-labs code wnats to be simple is an initiative to help
+        <p>Our team wants to be simple is an initiative to help
           the upcoming programmers with tge code. K-Labs focuses on providing
           the most efficient code or snippets as the code wants to be simple. We will help programmers to build up concepts in different programmming
           languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Alogrithm.</p>
@@ -86,6 +86,6 @@
 
     <!-- Section 4 -->
     <section class="section-4">
-      <p>Copyright @ 2020 All Rights Reserved by <a href="practical9.html">K-Labs</a></p>
+      <p>Copyright @ 2020 All Rights Reserved by <a href="practical9.html">Our Team</a></p>
     </section>
   </footer>
