--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,9 +16,6 @@ header {
   text-align: center;
 }
 
-/* footer{
-  margin-top: 550px;
-} */
 .container {
   position: absolute;
   max-width: 800px;
@@ -249,7 +246,9 @@ h4 {
 /* Two column */
 #two-column {
   background-color: wheat;
+  padding: 5%;
 }
+
 
 .twoColumnImg {
   background-color: wheat;
@@ -297,11 +296,23 @@ h4 {
 /* suggestion */
 #suggestionForm {
   background-color: #3aafa9;
+  padding: 7%;
 }
 
 #suggestionForm .submitText {
   padding-bottom: 10px;
 }
+
+#suggestionForm .center {
+  text-align: center;
+}
+
+.btn-lg {
+  display: inline-block;
+  margin-right: 10px;
+  margin-top: 20px;
+}
+
 
 /* main section */
 .main-section {
@@ -312,10 +323,15 @@ h4 {
 }
 
 /* Footer Section */
-footer {
-  background: #26272b;
+#footer-section {
+  background: #14274e;
+  padding: 3%;
+  padding-bottom: 1%;
 }
 
+#footer-section hr {
+  background-color: #f1f6f9;
+}
 /* Section 1 */
 .section-1 {
   display: flex;
@@ -383,7 +399,7 @@ i {
 .section-2 {
   display: flex;
   justify-content: center;
-  padding: 2%;
+  padding: 1%;
 }
 
 /* Section 2 */
@@ -408,8 +424,9 @@ i {
 /* Section -3  */
 .section-3 {
   display: flex;
+  align-items: center;
   justify-content: center;
-  padding: 2%;
+  padding: 1%;
 }
 
 .section-3 ul li {
@@ -452,12 +469,12 @@ i {
 /* Section 4 */
 .section-4 {
   display: flex;
+  align-items: center;
   justify-content: center;
-  background-color: black;
-  padding: 30px;
 }
 
 .section-4 p {
+  font-size: 1.5rem;
   color: gray;
   position: relative;
 }
@@ -488,10 +505,6 @@ hr {
     text-align: center;
     font-size: 2.3rem;
     color: red;
-  }
-
-  footer {
-    background: #26272b;
   }
 
   .section-1 {
@@ -576,6 +589,7 @@ hr {
 
   .section-3 {
     display: flex;
+    align-items: center;
     justify-content: center;
     padding: 2%;
   }
@@ -619,8 +633,8 @@ hr {
 
   .section-4 {
     display: flex;
+    align-items: center;
     justify-content: center;
-    background-color: black;
     padding: 30px;
   }
 
@@ -758,6 +772,7 @@ hr {
   .section-3 {
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 2%;
   }
 
@@ -801,12 +816,13 @@ hr {
   .section-4 {
     display: flex;
     justify-content: center;
-    background-color: black;
+
     padding: 30px;
   }
 
   .section-4 p {
     color: gray;
+    font-size: 1rem;
     position: relative;
   }
 
