--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,7 +34,7 @@
               </div>
               <div class="form-group">
                 <i class="fa fa-lock"></i>
-                <input type="password" class="myInput" placeholder="Password" name="p1" id="userpassword" required />
+                <input type="password" class="myInput" placeholder="Password" name="userpassword" id="password" required />
               </div>
               <input type="submit" class="button" value="CREATE ACCOUNT" />
               <p class="log">Already have an account? <a href="#">SignIn</a></p>
