--- a/views/header.ejs
+++ b/views/header.ejs
@@ -43,10 +43,10 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/sign">Sign</a>
+            <a class="nav-link" href="/users/login">Sign</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/register">Register</a>
+            <a class="nav-link" href="/users/register">Register</a>
           </li>
         </ul>
       </div>
