--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -22,22 +22,29 @@
         <!-- left Part -->
         <div class="col-md-6 full">
           <div class="myLeftCtn">
-            <form class="myForm text-center" action="/signup" method="POST">
+            <form class="myForm text-center" action="/users/register" method="POST">
               <header>Create new Account</header>
               <div class="form-group">
                 <i class="fa fa-user"></i>
-                <input type="text" class="myInput" placeholder="Username" id="username" name="username" required />
+                <input type="name" class="myInput" placeholder="Username" id="username" name="username" value="<%= typeof name != 'undefined' ? name : '' %>" required />
+                <!-- value content work when validation work and keep data whatever user type  -->
               </div>
               <div class="form-group">
                 <i class="fa fa-envelope"></i>
-                <input type="email" class="myInput" placeholder="Email" id="userId" name="useremail" required />
+                <input type="email" class="myInput" placeholder="Email" id="userId" name="useremail" value="<%= typeof email != 'undefined' ? email : '' %>" required />
               </div>
               <div class="form-group">
                 <i class="fa fa-lock"></i>
-                <input type="password" class="myInput" placeholder="Password" name="userpassword" id="password" required />
+                <input type="password" class="myInput" placeholder="Password" name="userpassword" id="password" value="<%= typeof password != 'undefined' ? password : '' %>" required />
               </div>
+
+              <div class="form-group">
+                <i class="fa fa-lock"></i>
+                <input type="password" class="myInput" placeholder="Confirm Password" name="userpassword2" id="password2"   value="<%= typeof password2 != 'undefined' ? password2 : '' %>" required />
+              </div>
+
               <input type="submit" class="button" value="CREATE ACCOUNT" />
-              <p class="log">Already have an account? <a href="#">SignIn</a></p>
+              <p class="log">Already have an account? <a href="/users/login">SignIn</a></p>
             </form>
           </div>
         </div>
