apply validations and check

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -30,13 +30,13 @@
               <!-- For email address input -->
               <div class="form-group">
                 <i class="fa fa-envelope"></i>
-                <input type="email" class="myInput" placeholder="Email" id="userId" name="useremail" required />
+                <input type="email" class="myInput" placeholder="Email" id="userId" name="email" required />
               </div>
 
               <!-- For password Input -->
               <div class="form-group">
                 <i class="fa fa-lock"></i>
-                <input type="password" class="myInput" placeholder="Password" name="userpassword" id="passowrd" required />
+                <input type="password" class="myInput" placeholder="Password" name="password" id="passowrd" required />
               </div>
 
               <a class="forgot-password" href="#">Forgot Password?</a>
