--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,70 +1,116 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-<head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <title>Covid-19</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-  <title>Covid-19</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+  <body class="signup">
+    <!-- Main container -->
+    <div class="container">
+      <div class="myCard">
+        <div class="row">
+          <!-- left Part -->
+          <div class="col-md-6 full">
+            <div class="myLeftCtn">
+              <form
+                class="myForm text-center"
+                action="/users/register"
+                method="POST"
+              >
+                <header>Create new Account</header>
+                <div class="form-group">
+                  <i class="fa fa-user"></i>
+                  <input
+                    type="name"
+                    class="myInput"
+                    placeholder="Username"
+                    id="name"
+                    name="name"
+                    value="<%= typeof name != 'undefined' ? name : '' %>"
+                    required
+                  />
+                  <!-- value content work when validation work and keep data whatever user type  -->
+                </div>
+                <div class="form-group">
+                  <i class="fa fa-envelope"></i>
+                  <input
+                    type="email"
+                    class="myInput"
+                    placeholder="Email"
+                    id="email"
+                    name="email"
+                    value="<%= typeof email != 'undefined' ? email : '' %>"
+                    required
+                  />
+                </div>
+                <div class="form-group">
+                  <i class="fa fa-lock"></i>
+                  <input
+                    type="password"
+                    class="myInput"
+                    placeholder="Password"
+                    name="password"
+                    id="password"
+                    value="<%= typeof password != 'undefined' ? password : '' %>"
+                    required
+                  />
+                </div>
 
-<body class="signup">
-  <!-- Main container -->
-  <div class="container">
-    <div class="myCard">
-      <div class="row">
-        <!-- left Part -->
-        <div class="col-md-6 full">
-          <div class="myLeftCtn">
-            <form class="myForm text-center" action="/users/register" method="POST">
-              <header>Create new Account</header>
-              <div class="form-group">
-                <i class="fa fa-user"></i>
-                <input type="name" class="myInput" placeholder="Username" id="username" name="username" value="<%= typeof name != 'undefined' ? name : '' %>" required />
-                <!-- value content work when validation work and keep data whatever user type  -->
-              </div>
-              <div class="form-group">
-                <i class="fa fa-envelope"></i>
-                <input type="email" class="myInput" placeholder="Email" id="userId" name="useremail" value="<%= typeof email != 'undefined' ? email : '' %>" required />
-              </div>
-              <div class="form-group">
-                <i class="fa fa-lock"></i>
-                <input type="password" class="myInput" placeholder="Password" name="userpassword" id="password" value="<%= typeof password != 'undefined' ? password : '' %>" required />
-              </div>
+                <div class="form-group">
+                  <i class="fa fa-lock"></i>
+                  <input
+                    type="password"
+                    class="myInput"
+                    placeholder="Confirm Password"
+                    name="password2"
+                    id="password2"
+                    value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
+                    required
+                  />
+                </div>
 
-              <div class="form-group">
-                <i class="fa fa-lock"></i>
-                <input type="password" class="myInput" placeholder="Confirm Password" name="userpassword2" id="password2"   value="<%= typeof password2 != 'undefined' ? password2 : '' %>" required />
-              </div>
-
-              <input type="submit" class="button" value="CREATE ACCOUNT" />
-              <p class="log">Already have an account? <a href="/users/login">SignIn</a></p>
-            </form>
+                <input type="submit" class="button" value="CREATE ACCOUNT" />
+                <p class="log">
+                  Already have an account? <a href="/users/login">SignIn</a>
+                </p>
+              </form>
+            </div>
           </div>
-        </div>
 
-        <!-- Right Part -->
-        <div class="right col-md-6 full">
-          <div class="myRightCtn">
-            <div class="box">
-              <header>COVID-19</header>
-              <img class="signimg" src="images/circle-cropped.png" alt="" />
-              <h3>Join US</h3>
-              <h4>Health and Wellness</h4>
-              <input type="button" class="button" value="About Us" />
+          <!-- Right Part -->
+          <div class="right col-md-6 full">
+            <div class="myRightCtn">
+              <div class="box">
+                <header>COVID-19</header>
+                <img class="signimg" src="images/circle-cropped.png" alt="" />
+                <h3>Join US</h3>
+                <h4>Health and Wellness</h4>
+                <input type="button" class="button" value="About Us" />
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
