--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -32,6 +32,7 @@
           <!-- left Part -->
           <div class="col-md-6 full">
             <div class="myLeftCtn">
+              <%- include('./partials/messages') -%>
               <form
                 class="myForm text-center"
                 action="/users/register"
