--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -2,7 +2,12 @@
 <% if(typeof errors != 'undefined') { %>
     <% errors.forEach(error => { %>
         <!-- show the error -->
-        <%= error.msg %>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <%= error.msg %>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
 <%    }); %>
 
     <% } %>
