show the message when user is registered

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -26,7 +26,7 @@
           <div class="myLeftCtn">
             <form class="myForm text-center" action="users/login" method="post">
               <header>SignIn/LogIn</header>
-
+              <%- include('./partials/messages') -%>
               <!-- For email address input -->
               <div class="form-group">
                 <i class="fa fa-envelope"></i>
