--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -9,5 +9,25 @@
             </button>
           </div>
 <%    }); %>
+    <% } %>
+
+    <!-- check for success and error msg -->
+    <% if(success_msg != '') { %>
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <%= success_msg %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+    <% } %>
+
+    <% if(error_msg != '') { %>
+      <div class="alert alert- warning-dismissible fade show" role="alert">
+        <%= error_msg %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
 
     <% } %>
