handle login authentication

--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -24,7 +24,7 @@
         <!-- Left Part -->
         <div class="col-md-6">
           <div class="myLeftCtn">
-            <form class="myForm text-center" action="users/login" method="post">
+            <form class="myForm text-center" action="/users/login" method="post">
               <header>SignIn/LogIn</header>
               <%- include('./partials/messages') -%>
               <!-- For email address input -->
