--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -31,3 +31,14 @@
       </div>
 
     <% } %>
+
+    <!-- login error shown -->
+    <% if(error != '') { %>
+      <div class="alert alert- warning-dismissible fade show" role="alert">
+        <%= error %>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+    <% } %>
