--- a/views/partials/messages.ejs
+++ b/views/partials/messages.ejs
@@ -1,44 +1,40 @@
 <!-- check type of error ... -->
-<% if(typeof errors != 'undefined') { %>
-    <% errors.forEach(error => { %>
-        <!-- show the error -->
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <%= error.msg %>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-<%    }); %>
-    <% } %>
+<% if(typeof errors != 'undefined') { %> <% errors.forEach(error => { %>
+<!-- show the error -->
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <%= error.msg %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<% }); %> <% } %>
 
-    <!-- check for success and error msg -->
-    <% if(success_msg != '') { %>
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <%= success_msg %>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+<!-- check for success and error msg -->
+<% if(success_msg != '') { %>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <%= success_msg %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 
-    <% } %>
+<% } %> <% if(error_msg != '') { %>
+<div class="alert alert- warning-dismissible fade show" role="alert">
+  <%= error_msg %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 
-    <% if(error_msg != '') { %>
-      <div class="alert alert- warning-dismissible fade show" role="alert">
-        <%= error_msg %>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+<% } %>
 
-    <% } %>
+<!-- login error shown -->
+<% if(error != '') { %>
+<div class="alert alert- warning-dismissible fade show" role="alert">
+  <%= error %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 
-    <!-- login error shown -->
-    <% if(error != '') { %>
-      <div class="alert alert- warning-dismissible fade show" role="alert">
-        <%= error %>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-
-    <% } %>
+<% } %>
