--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,11 @@
 
 <body>
   <!-- carousel for homepage -->
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div
+    id="carouselExampleFade"
+    class="carousel slide carousel-fade"
+    data-ride="carousel"
+  >
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="images/caro2.jpg" class="w-70 caro" alt="..." />
@@ -14,11 +18,21 @@
         <img src="/images/Corona.png" class="w-70 caro" alt="..." />
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+    <a
+      class="carousel-control-prev"
+      href="#carouselExampleFade"
+      role="button"
+      data-slide="prev"
+    >
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+    <a
+      class="carousel-control-next"
+      href="#carouselExampleFade"
+      role="button"
+      data-slide="next"
+    >
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -60,57 +74,74 @@
 
   <!--  -->
   <!-- Meet the team section -->
-  <section id="meet-team" >
+  <section id="meet-team">
     <div class="container-fluid heros">
       <div class="row welcome text-center">
         <div class="col-12">
           <h1 class="display-4">Meet the Real Heroes...</h1>
-          <br>
+          <br />
         </div>
         <hr />
-
       </div>
     </div>
 
     <!-- Cards Section -->
-    <div class="container-fluid padding" >
+    <div class="container-fluid padding">
       <div class="row padding">
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top teamdoctor" src="/images/doctor1.1.jpg" alt="" />
+            <img
+              class="card-img-top teamdoctor"
+              src="/images/doctor1.1.jpg"
+              alt=""
+            />
             <div class="card-body">
               <h4 class="card-title">John Doe</h4>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nostrum, consequuntur.
               </p>
-              <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See More</a>
+              <a href="#" class="btn btn-outline-secondary btn-lg"
+                ><i class="fa fa-user-circle"></i> See More</a
+              >
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top teamworker" src="images/workers1.6.jpg" alt="" />
+            <img
+              class="card-img-top teamworker"
+              src="images/workers1.6.jpg"
+              alt=""
+            />
             <div class="card-body">
               <h4 class="card-title">Mary Jo</h4>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nostrum, consequuntur.
               </p>
-              <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See More</a>
+              <a href="#" class="btn btn-outline-secondary btn-lg"
+                ><i class="fa fa-user-circle"></i> See More</a
+              >
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card">
-            <img class="card-img-top teampolice" src="/images/police1.cms" alt="" />
+            <img
+              class="card-img-top teampolice"
+              src="/images/police1.cms"
+              alt=""
+            />
             <div class="card-body">
               <h4 class="card-title">Phil Ho</h4>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nostrum, consequuntur.
               </p>
-              <a href="#" class="btn btn-outline-secondary btn-lg"><i class="fa fa-user-circle"></i> See More</a>
+              <a href="#" class="btn btn-outline-secondary btn-lg"
+                ><i class="fa fa-user-circle"></i> See More</a
+              >
             </div>
           </div>
         </div>
@@ -189,8 +220,6 @@
 
   <!-- form -->
   <form class="" action="index.html" method="post">
-
-
     <section id="suggestionForm">
       <div class="container-fluid">
         <div class="row welcome text-center">
@@ -204,32 +233,51 @@
         <div class="row padding">
           <div class="col-md-8">
             <form class="" action="index.html" method="post">
-
-
               <div class="form-group">
                 <label for="exampleFormControlInput1">Name</label>
-                <input type="text" class="form-control" placeholder="Write your name here" />
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Write your name here"
+                />
               </div>
               <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" />
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="name@example.com"
+                />
               </div>
 
               <div class="form-group submitText">
                 <label for="exampleFormControlTextarea1">Your Suggestion</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                <input type="submit" class="button btn-lg" name="" value="Submit">
-                <input type="reset" name="" value="Reset" class="button btn-lg">
+                <textarea
+                  class="form-control"
+                  id="exampleFormControlTextarea1"
+                  rows="3"
+                ></textarea>
+                <input
+                  type="submit"
+                  class="button btn-lg"
+                  name=""
+                  value="Submit"
+                />
+                <input
+                  type="reset"
+                  name=""
+                  value="Reset"
+                  class="button btn-lg"
+                />
               </div>
             </form>
           </div>
           <div class="col-md-4 center">
-            <img src="images/suggest.png" alt="">
+            <img src="images/suggest.png" alt="" />
           </div>
         </div>
-
       </div>
-
     </section>
   </form>
 
