--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,7 +21,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
 
   <body class="signup">
@@ -103,7 +103,7 @@
             <div class="myRightCtn">
               <div class="box">
                 <header>COVID-19</header>
-                <img class="signimg" src="images/circle-cropped.png" alt="" />
+                <img class="signimg" src="../images/circle-cropped.png" alt="" />
                 <h3>Join US</h3>
                 <h4>Health and Wellness</h4>
                 <input type="button" class="button" value="About Us" />
