--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -19,7 +19,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
 
   <body class="signin">
@@ -79,7 +79,7 @@
                 <header>Covid-19</header>
                 <img
                   class="signimg"
-                  src="images/circle-cropped.png"
+                  src="../images/circle-cropped.png"
                   alt="Covid-Image"
                 />
                 <h3>Join Us</h3>
