--- a/views/header.ejs
+++ b/views/header.ejs
@@ -42,22 +42,22 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/home">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Awareness</a>
+              <a class="nav-link" href="#meet-team">Awareness</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Suggestion</a>
+              <a class="nav-link" href="#suggestionForm">Suggestion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Covid</a>
+              <a class="nav-link" href="#detailed">Covid</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#footer-section">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/users/login">Sign</a>
+              <a class="nav-link" href="/users/login" target="_blank" >Signin</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/users/register">Register</a>
