--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,22 +46,13 @@
       <div class="row padding">
         <div class="col-lg-6">
           <h2>If you build it (GDP)...</h2>
+          <br/>
+          <p>The economic impact of the 2020 coronavirus pandemic in India has been largely disruptive. India's growth in the fourth quarter of the fiscal year 2020 went down to 3.1% according to the Ministry of Statistics.
+           </p>
+           <p> The Chief Economic Adviser to the Government of India said that this drop is mainly due to the coronavirus pandemic effect on the Indian economy.</p>
 
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus
-            dolor sit incidunt nesciunt omnis rem.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
-            consequuntur voluptate, ex illum asperiores ipsum corporis
-            temporibus doloribus error vero iste quam cupiditate quisquam iusto?
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde,
-            similique?
-          </p>
           <br />
-          <a href="#"><button class="btn btn-primary">Learn More</button></a>
+          <a href="/gdp" target="_blank"><button class="btn btn-primary">Learn More</button></a>
         </div>
         <div class="col-lg-6">
           <img src="/images/twocolumn2.jpg" class="img-fluid twoColumnImg" />
@@ -197,7 +188,7 @@
               With supporting text below as a natural lead-in to additional
               content.
             </p>
-            <a href="#" class="btn btn-primary">Go in Detail</a>
+            <a href="/covidLive" class="btn btn-primary">Go in Detail</a>
           </div>
         </div>
       </div>
@@ -209,7 +200,9 @@
               With supporting text below as a natural lead-in to additional
               content.
             </p>
-            <a href="#" class="btn btn-primary">Go in Detail</a>
+            <a href="/coronvavirushelplinenumber.pdf" class="btn btn-primary">Go in Detail</a>
+            <!-- <embed src="/coronvavirushelplinenumber.pdf"   height="700px" width="500"> -->
+              <!-- <iframe src="/coronvavirushelplinenumber.pdf" frameborder="0" height="100px"></iframe> -->
           </div>
         </div>
       </div>
