--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,4 +1,4 @@
-<form class="" action="index.html" method="post">
+<form class="" action="/users/saveform" method="post">
     <section id="suggestionForm">
       <div class="container-fluid">
         <div class="row welcome text-center">
