added email option in suggestion form

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -21,7 +21,16 @@
                   name="username"
                 />
               </div>
-              
+              <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="name@example.com"
+                  name="usermail"
+                />
+              </div>
 
               <div class="form-group submitText">
                 <label for="exampleFormControlTextarea1">Your Suggestion</label>
