create button in form for home page and modify link of suggestion

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -48,7 +48,7 @@
               <a class="nav-link" href="#meet-team">Awareness</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#suggestionForm">Suggestion</a>
+              <a class="nav-link" href="/users/saveform">Suggestion</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#detailed">Covid</a>
