--- a/views/form.ejs
+++ b/views/form.ejs
@@ -69,3 +69,4 @@
 
   <p class="lead mb-3">Welcome <%= name %></p>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
+<a href="/home" class="btn btn-secondary">Home</a>
