--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -900,3 +900,57 @@ table {
   text-align: center;
   font-size: 3vw;
 }
+
+
+/* history section */
+#cover{
+}
+.part1{
+  padding: 10px;
+  /* background-color:	 #1aff8c; */
+  background-color: #6bbaa7;
+  /* color: white; */
+}
+.part1 h1{
+  text-align: center;
+}
+.part1 p, .part2 p{
+  text-align: justify;
+  line-height: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+}
+.part2{
+  padding: 10px;
+  background-color: gray;
+  color: white;
+}
+.part2 h1{
+  text-align: center;
+}
+.part21{
+  background-color: wheat;
+  color: black;
+  /* display: flex; */
+  /* justify-content: center; */
+  text-align: center;
+  padding-bottom: 5px;
+}
+.part21 li{
+  list-style-type: square;
+}
+/* .part3{
+  display: flex;
+}
+.part3 img{
+
+ width: 50%;
+
+}
+.part3 p{
+ 
+  margin-top: 100px;
+}
+.part41{
+  display: flex;
+} */
