--- a/views/home.ejs
+++ b/views/home.ejs
@@ -173,7 +173,7 @@
               With supporting text below as a natural lead-in to additional
               content.
             </p>
-            <a href="#" class="btn btn-primary">Go in Detail</a>
+            <a href="/history" class="btn btn-primary">Go in Detail</a>
           </div>
         </div>
       </div>
