--- a/views/history.ejs
+++ b/views/history.ejs
@@ -55,10 +55,15 @@
       <div class="col-md-6">
         <img src="images/origin.png" class="card-img" alt="...">
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 origin">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title mt-5">From Where?</h5>
+          <p class="card-text">Experts say SARS-CoV-2 originated in bats. That’s also how the coronaviruses behind Middle East respiratory syndrome (MERS) and severe acute respiratory syndrome (SARS) got started.<br/>
+<br/>
+            SARS-CoV-2 made the jump to humans at one of Wuhan’s open-air “wet markets.” They’re where customers buy fresh meat and fish, including animals that are killed on the spot.<br/>
+            <br/>
+            Some wet markets sell wild or banned species like cobras, wild boars, and raccoon dogs. Crowded conditions can let viruses from different animals swap genes. Sometimes the virus changes so much it can start to infect and spread among people
+          </p>
         </div>
       </div>
     </div>
@@ -66,11 +71,16 @@
 
   <div class="card mb-3">
     <div class="row no-gutters">
-        <div class="col-md-6">
+        <div class="col-md-6 structure">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Structure of Coronavirus</h5>
+                <p class="card-text">Coronaviruses are large, roughly spherical particles with unique surface projections.[44] Their size is highly variable and generally is an average diameter of 120 nm. Extreme sizes are known from 50 to 200 nm in diameter.[45] The total molecular weight is on average 40,000 kDa. They are enclosed in an envelope embedded with a number of protein molecules.[46] The lipid bilayer envelope, membrane proteins, and nucleocapsid protect the virus when it is outside the host cell.[</p>
+                <p class="card-text">
+                  <a href="https://en.wikipedia.org/wiki/Coronavirus#Structure"
+                  class="btn btn-primary btn-lg" >For more details</a
+                >
+              </p>
+               
             </div>
         </div>
                                   <div class="col-md-6">
@@ -86,10 +96,10 @@
     <div class="card mb-3">
         <div class="row no-gutters">
             <div class="col-md-6">
-                <img src="images/image7.jpeg" class="w-50" alt="">
+                <img src="images/image7.jpeg" class="w-50 ace1" alt="">
             </div>
                                       <div class="col-md-6">
-                                        <img src="images/image6.jpeg" class="w-50" alt="...">
+                                        <img src="images/image6.jpeg" class="ace2" alt="...">
                                       </div>
         </div>
       </div>
