modify content of meet team section

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -86,15 +86,11 @@
               src="/images/doctor1.1.jpg"
               alt=""
             />
-            <div class="card-body">
-              <h4 class="card-title">John Doe</h4>
+            <div class="card-body meet">
+              <h4 class="card-title">Doctors</h4>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nostrum, consequuntur.
+                <i>Thanks for making me love life again, Thanks for easing my pain, You mean a lot, I want you to know, keep blessing people wherever you go.</i>
               </p>
-              <a href="#" class="btn btn-outline-secondary btn-lg"
-                ><i class="fa fa-user-circle"></i> See More</a
-              >
             </div>
           </div>
         </div>
@@ -105,15 +101,12 @@
               src="images/workers1.6.jpg"
               alt=""
             />
-            <div class="card-body">
-              <h4 class="card-title">Mary Jo</h4>
+            <div class="card-body meet">
+              <h4 class="card-title">Workers</h4>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nostrum, consequuntur.
+              <i>No matter how much falls on us, we keep plowing ahead. That's the only way to keep roads clear.</i>
               </p>
-              <a href="#" class="btn btn-outline-secondary btn-lg"
-                ><i class="fa fa-user-circle"></i> See More</a
-              >
+              
             </div>
           </div>
         </div>
@@ -124,15 +117,12 @@
               src="/images/police1.cms"
               alt=""
             />
-            <div class="card-body">
-              <h4 class="card-title">Phil Ho</h4>
+            <div class="card-body meet">
+              <h4 class="card-title">Soldiers</h4>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nostrum, consequuntur.
+            <i>You are the greatest hero in this story. Your intelligence, bravery and compassion are the saving grace of this nation during this dark episode.</i>
               </p>
-              <a href="#" class="btn btn-outline-secondary btn-lg"
-                ><i class="fa fa-user-circle"></i> See More</a
-              >
+             
             </div>
           </div>
         </div>
