--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -275,7 +275,14 @@ h4 {
   width: 100%;
   height: 275px;
 }
-
+.meet h4{
+  color: black;
+  /* background-color: gray; */
+}
+.wholecard{
+  /* background-color: gray; */
+  border: 2px solid black;
+}
 /* detailed */
 #detailed {
   background-color: burlywood;
@@ -986,5 +993,6 @@ margin-top: 15px;
   }
   .ace2{
     margin-left: 65px;
+
   }
 }
