--- a/views/form.ejs
+++ b/views/form.ejs
@@ -1,3 +1,5 @@
+<%- include("nav2") -%>
+
 <form class="" action="/users/saveform" method="post">
     <section id="suggestionForm">
       <div class="container-fluid">
@@ -70,3 +72,4 @@
   <p class="lead mb-3">Welcome <%= name %></p>
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
 <a href="/home" class="btn btn-secondary">Home</a>
+<%- include("footer") -%>
