--- a/views/form.ejs
+++ b/views/form.ejs
@@ -21,6 +21,7 @@
                   class="form-control"
                   placeholder="Write your name here"
                   name="username"
+                  required
                 />
               </div>
               <div class="form-group">
@@ -31,6 +32,7 @@
                   id="exampleFormControlInput1"
                   placeholder="name@example.com"
                   name="usermail"
+                  required
                 />
               </div>
 
@@ -41,6 +43,8 @@
                   id="exampleFormControlTextarea1"
                   rows="3"
                   name="mysuggestion"
+                  required
+                  minlength="11"
                 ></textarea>
                 <input
                   type="submit"
@@ -69,7 +73,7 @@
 
 
 
-  <p class="lead mb-3">Welcome <%= name %></p>
+<p class="lead mb-3">Welcome <%= name %></p> 
 <a href="/users/logout" class="btn btn-secondary">Logout</a>
 <a href="/home" class="btn btn-secondary">Home</a>
 <%- include("footer") -%>
