show the suggestions on page

--- a/views/subpage.ejs
+++ b/views/subpage.ejs
@@ -4,13 +4,13 @@
 <% newItems.forEach(function(item){ %>
   <p>  <%= item.name %></p>
   <p><%= item.email %></p>
-  <p><%= item.suggesstion %></p>
+  <p><%= item.suggestion %></p>
   <p>
 
     <%= item.createdAt %>
   </p>
 
-  <p><%= item.updatedAt %></p>
+  
 <% }) %>
 
 <%- include('footer') -%>
